remove radio buttons

--- a/index.html
+++ b/index.html
@@ -108,9 +108,19 @@
           <input id="ageInput" type="text" class="form-control" placeholder="Your Age">
         </div>
         <div class="col-sm-4">
-          <input type="radio" name="gender" value="male" checked>Male<br>
-          <input type="radio" name="gender" value="female">Female<br>
-          <input type="radio" name="gender" value="nonBinary">Non-Binary<br>
+          <input id="destinyInput" type="text" class="form-control" placeholder="Your Destiny">
+          <!-- <form>
+          Select your favorite browser:
+          <select id="myList" onchange="myFunction()">
+            <option></option>
+            <option>Google Chrome</option>
+            <option>Firefox</option>
+            <option>Internet Explorer</option>
+            <option>Safari</option>
+            <option>Opera</option>
+          </select>
+          <p>Your favorite browser is: <input type="text" id="demo" size="20"></p>
+          </form> -->
         </div>
         </div>
       <br></br>
@@ -125,11 +135,5 @@
 
 
 
-<!--Rick and morty custom story generator  -->
-<!-- This applications seeks to take a series of choices from a user as well as multiple inputs and creates a custom rick an morty themed story based upon the users choicses.
-1.personInput
-2.nounOneInput
-3.nounTwoInput
-4.verbOneInput
-5.locationInput
+<
 6.verbTwoInput -->
